# CRPGame

./: CMakeLists.txt  bilist.h  crpgdata.cpp  crpgdata.h  doublelist.h  engine.cpp  engine.h  json.hpp  main.cpp
data/: user_data.json
game/: allgametable.xlsx  armors.cpp  armors.h  character_editor.cpp  character_editor.h  events.cpp  events.h  hero_types.cpp  hero_types.h  heroes.cpp  heroes.h  items.cpp  items.h  maro.h  races.cpp  races.h  weapons.cpp  weapons.h
game/units/enemy/: goblin.json
